Closed
Bug 342922
Opened 19 years ago
Closed 19 years ago
crash [@ nsRenderingContextImpl::GetTextDimensions]
Categories
(Core Graveyard :: GFX, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: polidobj, Assigned: roc)
References
()
Details
(Keywords: regression, verified1.8.1, Whiteboard: required by 237085)
Attachments
(2 files)
|
4.95 KB,
text/plain
|
Details | |
|
1.29 KB,
patch
|
darin.moz
:
review+
darin.moz
:
superreview+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
I get a crash when I view this attachment.
https://bugzilla.mozilla.org/attachment.cgi?id=227290
2006062607 ok
2006062704 crashes
It's not cairo specific.
Stack:
nsRenderingContextImpl::GetTextDimensions
nsTextFrame::MeasureText
TB20343214G
checkins
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-06-26+07%3A00%3A00&maxdate=2006-06-27+04%3A00%3A00&cvsroot=%2Fcvsroot
I suspect bug 237085.
| Reporter | ||
Comment 1•19 years ago
|
||
It looks like this also crashes just opening bug 35229. Probably due to comment #1.
Updated•19 years ago
|
| Reporter | ||
Comment 2•19 years ago
|
||
| Assignee | ||
Comment 3•19 years ago
|
||
thanks for the stack ... the problem is obvious, the patch trivial
Assignee: general → roc
Status: NEW → ASSIGNED
Attachment #227348 -
Flags: superreview?(rbs)
Attachment #227348 -
Flags: review?(rbs)
| Assignee | ||
Updated•19 years ago
|
Attachment #227348 -
Flags: superreview?(rbs)
Attachment #227348 -
Flags: superreview?(darin)
Attachment #227348 -
Flags: review?(rbs)
Attachment #227348 -
Flags: review?(darin)
Comment 4•19 years ago
|
||
Comment on attachment 227348 [details] [diff] [review]
fix
r+sr=darin
Attachment #227348 -
Flags: superreview?(darin)
Attachment #227348 -
Flags: superreview+
Attachment #227348 -
Flags: review?(darin)
Attachment #227348 -
Flags: review+
Comment 5•19 years ago
|
||
Shouldn't that be "*aFontID = 0;" like in the other methods?
| Assignee | ||
Comment 6•19 years ago
|
||
checked in. Thanks
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•19 years ago
|
||
Roc
Isn't there a function overloading problem with GetTextDimensions? The caller that's causing this crash is calling GetTextDimensions with three parameters.
if (aTx.TransformedTextIsAscii()) {
aReflowState.rendContext->GetTextDimensions(bp1, wordLen, dimensions);
} else {
aReflowState.rendContext->GetTextDimensions(bp2, wordLen, dimensions);
}
So it's expecting the first GetTextDimensions to get called. But the second one is getting called. Thus aFontID is null.
Or am I incorrect somewhere?
| Assignee | ||
Comment 8•19 years ago
|
||
(In reply to comment #5)
> Shouldn't that be "*aFontID = 0;" like in the other methods?
Yes it should be. However, that is not really a concern.
| Assignee | ||
Comment 9•19 years ago
|
||
(In reply to comment #7)
There's a default argument of null for aFontID.
Verified FIXED using build 2006-06-28-08 of SeaMonkey trunk under Windows XP with https://bugzilla.mozilla.org/attachment.cgi?id=227290
Status: RESOLVED → VERIFIED
Comment 11•19 years ago
|
||
*** Bug 343088 has been marked as a duplicate of this bug. ***
Comment 12•19 years ago
|
||
Comment on attachment 227348 [details] [diff] [review]
fix
well, since the crash was added to the branch too, we kind of need it fixed there too :).
Attachment #227348 -
Flags: approval1.8.1?
Updated•19 years ago
|
Attachment #227348 -
Flags: approval1.8.1? → approval1.8.1+
| Assignee | ||
Comment 14•19 years ago
|
||
Sorry, I should have checked this into the branch myself
Updated•19 years ago
|
Flags: blocking1.8.1?
Updated•19 years ago
|
Flags: blocking1.8.0.7?
Updated•19 years ago
|
Flags: blocking1.8.0.7? → blocking1.8.0.8?
Whiteboard: required by 237085
| Reporter | ||
Comment 16•19 years ago
|
||
Verified fixed1.8.1 using build 20060821 Firefox/2.0b2 under Windows XP
with https://bugzilla.mozilla.org/attachment.cgi?id=227290
Keywords: fixed1.8.1 → verified1.8.1
Comment 18•19 years ago
|
||
Not taking bug 237085 in 1.8.0.8 so we don't need this one.
Flags: blocking1.8.0.8? → blocking1.8.0.8-
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•