Bug 342922. Fix silly crasher checking aFontID. r+sr=darin